Translate homework.html to Russian
Updated the HTML content to reflect the Russian version of the homework page, including translations for titles, subtitles, and task descriptions.

--- a/homework.html
+++ b/homework.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Homework — Elytopia (Russian version of Blooket)</title>
+  <title>Домашнее задание — Elytopia (Русская версия Blooket)</title>
   <style>
     :root {
       --bg: #0f1226;
@@ -15,7 +15,6 @@
       --good: #44d18d;
       --warn: #ffd166;
     }
-    html, body { height: 100%; }
     body {
       margin: 0;
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
@@ -42,7 +41,7 @@
       background: linear-gradient(135deg, var(--accent), var(--accent-2));
       box-shadow: 0 8px 24px rgba(106,166,255,0.35);
     }
-    h1 { font-size: 1.6rem; margin: 0; letter-spacing: 0.2px; }
+    h1 { font-size: 1.6rem; margin: 0; }
     .subtitle { color: var(--muted); font-size: 0.95rem; }
     .due {
       margin: 18px 0 0;
@@ -50,7 +49,6 @@
       background: rgba(106,166,255,0.12);
       border: 1px solid rgba(106,166,255,0.25);
       border-radius: 10px;
-      display: inline-block;
       font-weight: 600;
     }
     .grid {
@@ -74,18 +72,14 @@
     .item {
       display: grid;
       grid-template-columns: auto 1fr auto;
-      align-items: start;
       gap: 12px;
       padding: 12px 10px;
       border-radius: 10px;
-      transition: background 0.2s ease;
     }
-    .item:hover { background: rgba(185,192,255,0.08); }
     .bullet {
       width: 9px; height: 9px; margin-top: 7px;
       border-radius: 50%;
       background: var(--accent);
-      box-shadow: 0 0 0 4px rgba(106,166,255,0.18) inset;
     }
     .title { font-weight: 600; }
     .tag {
@@ -97,13 +91,10 @@
       font-weight: 700;
     }
     .note { color: var(--muted); font-size: 0.92rem; margin-top: 8px; }
-    a { color: var(--accent); text-decoration: none; }
-    a:hover { text-decoration: underline; }
     .footer { margin-top: 26px; color: var(--muted); font-size: 0.9rem; }
-    .actions { display: flex; gap: 10px; flex-wrap: wrap; margin-top: 14px; }
     .btn {
       border: 1px solid rgba(185,192,255,0.22);
-      background: linear-gradient(180deg, rgba(185,192,255,0.12), rgba(185,192,255,0.06));
+      background: rgba(185,192,255,0.12);
       color: var(--text);
       padding: 10px 14px;
       border-radius: 10px;
@@ -112,18 +103,8 @@
     }
     .btn.primary {
       border-color: rgba(106,166,255,0.45);
-      background: linear-gradient(180deg, rgba(106,166,255,0.22), rgba(106,166,255,0.12));
+      background: rgba(106,166,255,0.22);
     }
-    .status {
-      display: inline-flex; align-items: center; gap: 8px; margin-top: 8px;
-      font-size: 0.92rem;
-    }
-    .dot {
-      width: 10px; height: 10px; border-radius: 50%;
-      background: var(--good);
-      box-shadow: 0 0 0 4px rgba(68,209,141,0.18) inset;
-    }
-    .warn { background: var(--warn); box-shadow: 0 0 0 4px rgba(255,209,102,0.18) inset; }
   </style>
 </head>
 <body>
@@ -132,116 +113,79 @@
       <div class="brand">
         <div class="logo" aria-hidden="true"></div>
         <div>
-          <h1>Homework — Elytopia</h1>
-          <div class="subtitle">The Russian version of Blooket — Week 1 tasks and resources</div>
+          <h1>Elytopia</h1>
+          <div class="subtitle">Русская версия Blooket — Домашнее задание</div>
         </div>
       </div>
-      <div class="due">Due Friday 5 PM</div>
+      <div class="due">Сдать до пятницы 17:00</div>
     </header>
 
     <div class="grid">
       <section class="card">
-        <h2>Assignments</h2>
+        <h2>Задания</h2>
         <ul class="list">
           <li class="item">
-            <span class="bullet" aria-hidden="true"></span>
+            <span class="bullet"></span>
             <div>
-              <div class="title">Read introduction to Elytopia</div>
-              <div class="note">Understand how Elytopia adapts Blooket for Russian players — packs, бло́ки (blooks), and event flow. Write three key takeaways.</div>
+              <div class="title">Прочитать главу 1 — Введение в Elytopia</div>
+              <div class="note">Сделать три ключевых вывода о паках, блоках и событиях.</div>
             </div>
-            <span class="tag">Reading</span>
+            <span class="tag">Чтение</span>
           </li>
           <li class="item">
-            <span class="bullet" aria-hidden="true"></span>
+            <span class="bullet"></span>
             <div>
-              <div class="title">Watch the channel trailer</div>
-              <div class="note">Identify how the trailer communicates Elytopia as the Russian version of Blooket. Suggest one improvement to the opening hook.</div>
+              <div class="title">Посмотреть трейлер канала</div>
+              <div class="note">Определить основное сообщение и предложить улучшение для начала ролика.</div>
             </div>
-            <span class="tag">Video</span>
+            <span class="tag">Видео</span>
           </li>
           <li class="item">
-            <span class="bullet" aria-hidden="true"></span>
+            <span class="bullet"></span>
             <div>
-              <div class="title">Write a one‑take script</div>
-              <div class="note">Draft a 60‑second script introducing Elytopia as the Russian version of Blooket. Keep it plain text with no symbols or hashtags.</div>
+              <div class="title">Написать сценарий на одну минуту</div>
+              <div class="note">Представить Elytopia как русскую версию Blooket. Без символов и хэштегов.</div>
             </div>
-            <span class="tag">Writing</span>
+            <span class="tag">Письмо</span>
           </li>
           <li class="item">
-            <span class="bullet" aria-hidden="true"></span>
+            <span class="bullet"></span>
             <div>
-              <div class="title">Post a teaser reply</div>
-              <div class="note">Reply under your trailer tweet with a clean teaser line. Example: Next up rare pack openings and surprises inside Elytopia</div>
+              <div class="title">Опубликовать тизер-ответ</div>
+              <div class="note">Например: «Скоро редкие паки и сюрпризы внутри Elytopia».</div>
             </div>
-            <span class="tag">Social</span>
-          </li>
-          <li class="item">
-            <span class="bullet" aria-hidden="true"></span>
-            <div>
-              <div class="title">Local flavor brainstorm</div>
-              <div class="note">List 5 Russian‑specific event ideas or themes (New Year, Maslenitsa, school seasons) that fit Elytopia’s style.</div>
-            </div>
-            <span class="tag">Creative</span>
+            <span class="tag">Соцсети</span>
           </li>
         </ul>
-
-        <div class="actions">
-          <button class="btn primary" onclick="alert('Submit via the form below')">Submit</button>
-          <button class="btn" onclick="alert('Saved locally')">Save progress</button>
-        </div>
-        <div class="status"><span class="dot" aria-hidden="true"></span> On track</div>
+        <button class="btn primary">Отправить</button>
+        <button class="btn">Сохранить</button>
       </section>
 
       <aside class="card">
-        <h2>Resources</h2>
+        <h2>Ресурсы</h2>
         <ul class="list">
           <li class="item">
-            <span class="bullet" aria-hidden="true"></span>
+            <span class="bullet"></span>
             <div>
-              <div class="title">Trailer link</div>
-              <div class="note"><a href="#" aria-label="Trailer link">Paste your YouTube trailer link here</a></div>
+              <div class="title">Трейлер</div>
+              <div class="note"><a href="#">Вставьте ссылку на YouTube</a></div>
             </div>
-            <span class="tag">Link</span>
+            <span class="tag">Ссылка</span>
           </li>
           <li class="item">
-            <span class="bullet" aria-hidden="true"></span>
+            <span class="bullet"></span>
             <div>
-              <div class="title">Brand guidelines</div>
-              <div class="note">State clearly Elytopia is the Russian version of Blooket. Use plain text posts with no symbols or hashtags when needed.</div>
+              <div class="title">Гайд по бренду</div>
+              <div class="note">Использовать простой текст без символов и хэштегов. Elytopia в центре внимания.</div>
             </div>
-            <span class="tag">Notes</span>
-          </li>
-          <li class="item">
-            <span class="bullet" aria-hidden="true"></span>
-            <div>
-              <div class="title">Script starter</div>
-              <div class="note">Welcome to Elytopia the Russian version of Blooket Packs blooks events and the Class Pass await Watch our trailer now</div>
-            </div>
-            <span class="tag">Template</span>
-          </li>
-          <li class="item">
-            <span class="bullet" aria-hidden="true"></span>
-            <div>
-              <div class="title">Localization tips</div>
-              <div class="note">Consider bilingual terms where helpful for clarity, e.g., blooks — блоки. Keep tone friendly and direct.</div>
-            </div>
-            <span class="tag">Guide</span>
+            <span class="tag">Заметки</span>
           </li>
         </ul>
-
-        <h2 style="margin-top:16px;">Submission</h2>
-        <form onsubmit="event.preventDefault(); alert('Homework submitted');">
-          <label for="link">Submission link</label><br />
-          <input id="link" name="link" type="url" placeholder="Paste your post or video URL" style="width:100%; margin:8px 0; padding:10px; border-radius:8px; border:1px solid rgba(185,192,255,0.25); background:#121630; color:var(--text);" />
-          <label for="notes">Notes</label><br />
-          <textarea id="notes" name="notes" rows="4" placeholder="Optional notes or reflections" style="width:100%; margin:8px 0; padding:10px; border-radius:8px; border:1px solid rgba(185,192,255,0.25); background:#121630; color:var(--text);"></textarea>
-          <button class="btn primary" type="submit">Submit homework</button>
-        </form>
       </aside>
     </div>
 
     <div class="footer">
-      Need help Use the trailer description and tweet templates above or write in plain text with no symbols to keep branding consistent
+      Elytopia — Русская версия Blooket. Паки, блоки, события и Class Pass ждут вас.
     </div>
   </div>
 </body>
