--- a/market.html
+++ b/market.html
@@ -1,130 +1,115 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Elytopia — Магазин</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8" />
+  <title>Elytopia Market — Hacked</title>
+  <style>
+    body {
+      background: #0f0f0f;
+      color: #eee;
+      font-family: monospace;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background: linear-gradient(135deg, #6aa6ff, #9d6aff);
+      padding: 20px;
+      text-align: center;
+      color: #fff;
+      font-size: 1.6rem;
+      font-weight: bold;
+    }
+    .packs {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      gap: 20px;
+      padding: 30px;
+    }
+    .pack {
+      background: #1a1f3c;
+      border: 1px solid rgba(185,192,255,0.2);
+      border-radius: 12px;
+      padding: 18px;
+      text-align: center;
+      box-shadow: 0 8px 24px rgba(20,24,54,0.35);
+    }
+    .pack h2 {
+      margin: 0 0 10px;
+      font-size: 1.2rem;
+      color: #fff;
+    }
+    .pack p {
+      color: #b9c0ff;
+      font-size: 0.95rem;
+    }
+    .banner {
+      padding: 10px;
+      font-weight: bold;
+      text-align: center;
+      animation: flicker 1.5s infinite;
+    }
+    .red { background: #ff2b2b; color: #fff; }
+    .pink { background: #ff7bcb; color: #000; }
+    .orange { background: #ffa500; color: #000; }
+    .blue { background: #3b6cff; color: #fff; }
+    @keyframes flicker {
+      0% { opacity: 1; }
+      50% { opacity: 0.6; }
+      100% { opacity: 1; }
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <header>
-      <div class="brand">
-        <div aria-hidden="true" class="brand-logo"></div>
-        <h1>Elytopia</h1>
-      </div>
-      <nav>
-        <a href="index.html" class="btn ghost">Главная</a>
-        <a href="login.html" class="btn ghost">Вход</a>
-        <a href="signup.html" class="btn ghost">Регистрация</a>
-      </nav>
-    </header>
+  <header>Elytopia Market</header>
+  <section class="packs">
+    <div class="pack">
+      <h2>Pack #1: Derp Pack</h2>
+      <p>The original derpy collection of bluks.</p>
+    </div>
+    <div class="pack">
+      <h2>Pack #2: c: Pack</h2>
+      <p>A cheerful pack full of fun bluks.</p>
+    </div>
+    <div class="pack">
+      <h2>Pack #3: hai guize derp pack</h2>
+      <p>The goofy pack that says hai to everyone.</p>
+    </div>
+  </section>
 
-    <main class="grid">
-      <!-- Currency display -->
-      <section class="card" style="grid-column: span 12;">
-        <h2>Магазин паков</h2>
-        <p class="muted">Вы получаете <strong>25 монет</strong> каждые 2 секунды. Каждый пак стоит 25 монет.</p>
-        <div class="row" style="justify-content: space-between; align-items: center;">
-          <div><strong>Ваш баланс:</strong> <span id="currency">0</span> монет</div>
-          <button class="btn warning" id="reset">Сбросить баланс</button>
-        </div>
-      </section>
-
-      <!-- Packs grid -->
-      <section class="card" style="grid-column: span 12;">
-        <div class="mode-grid" id="packs"></div>
-      </section>
-
-      <!-- Result + history -->
-      <section class="card" style="grid-column: span 12;">
-        <h2>Результат открытия</h2>
-        <div id="result" class="muted">Пока ничего не открыто.</div>
-        <h3 style="margin-top:16px;">История открытий</h3>
-        <ul id="history" class="muted"></ul>
-      </section>
-    </main>
-
-    <footer>
-      <div>© Elytopia</div>
-    </footer>
-  </div>
-
-  <script>
-    // --- Currency ---
-    let coins = 0;
-    const currencyEl = document.getElementById("currency");
-    setInterval(() => {
-      coins += 25;
-      currencyEl.textContent = coins;
-    }, 2000);
-
-    document.getElementById("reset").onclick = () => {
-      coins = 0;
-      currencyEl.textContent = coins;
-      document.getElementById("history").innerHTML = "";
-      document.getElementById("result").textContent = "Баланс сброшен.";
-    };
-
-    // --- Packs ---
-    const packsContainer = document.getElementById("packs");
-    const resultEl = document.getElementById("result");
-    const historyEl = document.getElementById("history");
-
-    const packs = Array.from({length: 13}, (_, i) => ({
-      id: i+1,
-      name: "Пак #" + (i+1)
-    }));
-
-    packs.forEach(pack => {
-      const div = document.createElement("div");
-      div.className = "mode";
-      div.innerHTML = `
-        <h3>${pack.name}</h3>
-        <p>Цена: 25 монет</p>
-        <button class="btn" data-pack="${pack.id}">Открыть</button>
-      `;
-      packsContainer.appendChild(div);
-    });
-
-    // --- Rarity system with exact chances ---
-    const rarities = [
-      { name: "Uncommon", chance: 19, color: "#4caf50" },
-      { name: "Rare", chance: 7, color: "#2196f3" },
-      { name: "Epic", chance: 5, color: "#9c27b0" },
-      { name: "Legendary", chance: 0.3, color: "#ff9800" },
-      { name: "Chroma", chance: 0.05, color: "#e91e63" },
-      { name: "Supreme", chance: 0.04, color: "#00bcd4" },
-      { name: "Mythical", chance: 0.01, color: "#f44336" }
-    ];
-
-    function rollRarity() {
-      const roll = Math.random() * 100;
-      let cumulative = 0;
-      for (const r of rarities) {
-        cumulative += r.chance;
-        if (roll <= cumulative) return r;
-      }
-      return rarities[0]; // fallback
-    }
-
-    // --- Pack opening ---
-    packsContainer.addEventListener("click", e => {
-      if (e.target.matches("[data-pack]")) {
-        if (coins < 25) {
-          resultEl.textContent = "Недостаточно монет!";
-          return;
-        }
-        coins -= 25;
-        currencyEl.textContent = coins;
-        const rarity = rollRarity();
-        resultEl.innerHTML = `Вы открыли пак и получили: 
-          <span style="color:${rarity.color}; font-weight:bold">${rarity.name}</span>`;
-        const li = document.createElement("li");
-        li.innerHTML = `<span style="color:${rarity.color}; font-weight:bold">${rarity.name}</span>`;
-        historyEl.appendChild(li);
-      }
-    });
-  </script>
+  <!-- Hacked banners -->
+  <div class="banner red">Hi, we are having issues with our publishing system. Hang tight yo!</div>
+  <div class="banner red">Bro chill we get it</div>
+  <div class="banner red">Yo dog y'all need to chill it</div>
+  <div class="banner red">Do A Barrel Roll</div>
+  <div class="banner red">thank you minish for messing up the economy. nub.</div>
+  <div class="banner red">these aren't the droids you're looking for!</div>
+  <div class="banner red">Go out and buy some peanut butter yo</div>
+  <div class="banner red">You put the peanut butter in the potato and stir it all up</div>
+  <div class="banner red">jaredvaldez4 best builder on roblox kthxbai</div>
+  <div class="banner red">WHO IS IT 1x1x1x1, Dignity, Minish, Jared, The Admins? The World May Never know :o</div>
+  <div class="banner red">minish is climbin in yo windows. snatchin yo people up.</div>
+  <div class="banner red">WII GUNNA FIN WII GUNNA FIN U</div>
+  <div class="banner red">Oh you like these headers? Tell me how you've always been such a fan</div>
+  <div class="banner red">OMG lik srsly becky?</div>
+  <div class="banner red">JOIN BUILDERS CLUB! ITS FREEEEEEEEEEEEEE!!!!</div>
+  <div class="banner red">Yo RT stop yo ranting homies</div>
+  <div class="banner red">Haha these are so funny lets go spam the forums about them :D</div>
+  <div class="banner red">is anybody here besides minish a huge chris brown fan??</div>
+  <div class="banner red">Remember kids tell your parents to vote for Ron Paul</div>
+  <div class="banner red">Playing roblox is always better then going outside!</div>
+  <div class="banner red">Yo gonna give a shout out to the homies in dah hood</div>
+  <div class="banner pink">pink. it's my new obsession. pink. it not even a question.</div>
+  <div class="banner red">Abcedfghikjlmnoqprstuvwzyx</div>
+  <div class="banner red">SKRILLEX BANGARANG WUBWUWBWUBWUWBWUBWUWB</div>
+  <div class="banner orange">I'm the annoying orange banner. AHHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHHAHAHAHAHA</div>
+  <div class="banner red">NO TOMATO IS ALWAYS BEST SILLY ORANGE</div>
+  <div class="banner blue">minish is a stupid noob. nah not rly</div>
+  <div class="banner pink">remember kids trust anyone with your password</div>
+  <div class="banner orange">APRIL FEWLZ</div>
+  <div class="banner pink">Ten bux says we do roll back on today</div>
+  <div class="banner pink">hai itz pheedy mcnoobster and minish and we taken over</div>
+  <div class="banner pink">McNoobster in dah houze</div>
+  <div class="banner pink">McNoobster!!!!!!</div>
+  <div class="banner red">Proscribe stop posting your gonna get proscribed BROOOOOOO</div>
 </body>
 </html>
