Change title and update layout for maintenance mode

--- a/market.html
+++ b/market.html
@@ -2,114 +2,49 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Elytopia Market — Hacked</title>
+  <title>Maintenance Mode</title>
   <style>
     body {
       background: #0f0f0f;
       color: #eee;
       font-family: monospace;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
       margin: 0;
-      padding: 0;
     }
-    header {
-      background: linear-gradient(135deg, #6aa6ff, #9d6aff);
-      padding: 20px;
-      text-align: center;
-      color: #fff;
-      font-size: 1.6rem;
-      font-weight: bold;
+    h1 {
+      font-size: 2.2rem;
+      margin-bottom: 12px;
+      color: #ff2b2b;
     }
-    .packs {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-      gap: 20px;
-      padding: 30px;
-    }
-    .pack {
-      background: #1a1f3c;
-      border: 1px solid rgba(185,192,255,0.2);
-      border-radius: 12px;
-      padding: 18px;
-      text-align: center;
-      box-shadow: 0 8px 24px rgba(20,24,54,0.35);
-    }
-    .pack h2 {
-      margin: 0 0 10px;
+    p {
       font-size: 1.2rem;
+      margin-bottom: 30px;
+      color: #ccc;
+    }
+    .btn {
+      background: #ff2b2b;
       color: #fff;
-    }
-    .pack p {
-      color: #b9c0ff;
-      font-size: 0.95rem;
-    }
-    .banner {
-      padding: 10px;
+      border: none;
+      padding: 14px 28px;
+      font-size: 1.1rem;
       font-weight: bold;
-      text-align: center;
-      animation: flicker 1.5s infinite;
+      border-radius: 8px;
+      cursor: pointer;
+      box-shadow: 0 0 12px rgba(255,43,43,0.6);
+      transition: transform 0.2s ease;
     }
-    .red { background: #ff2b2b; color: #fff; }
-    .pink { background: #ff7bcb; color: #000; }
-    .orange { background: #ffa500; color: #000; }
-    .blue { background: #3b6cff; color: #fff; }
-    @keyframes flicker {
-      0% { opacity: 1; }
-      50% { opacity: 0.6; }
-      100% { opacity: 1; }
+    .btn:hover {
+      transform: scale(1.05);
     }
   </style>
 </head>
 <body>
-  <header>Elytopia Market</header>
-  <section class="packs">
-    <div class="pack">
-      <h2>Pack #1: Derp Pack</h2>
-      <p>The original derpy collection of bluks.</p>
-    </div>
-    <div class="pack">
-      <h2>Pack #2: c: Pack</h2>
-      <p>A cheerful pack full of fun bluks.</p>
-    </div>
-    <div class="pack">
-      <h2>Pack #3: hai guize derp pack</h2>
-      <p>The goofy pack that says hai to everyone.</p>
-    </div>
-  </section>
-
-  <!-- Hacked banners -->
-  <div class="banner red">Hi, we are having issues with our publishing system. Hang tight yo!</div>
-  <div class="banner red">Bro chill we get it</div>
-  <div class="banner red">Yo dog y'all need to chill it</div>
-  <div class="banner red">Do A Barrel Roll</div>
-  <div class="banner red">thank you minish for messing up the economy. nub.</div>
-  <div class="banner red">these aren't the droids you're looking for!</div>
-  <div class="banner red">Go out and buy some peanut butter yo</div>
-  <div class="banner red">You put the peanut butter in the potato and stir it all up</div>
-  <div class="banner red">jaredvaldez4 best builder on roblox kthxbai</div>
-  <div class="banner red">WHO IS IT 1x1x1x1, Dignity, Minish, Jared, The Admins? The World May Never know :o</div>
-  <div class="banner red">minish is climbin in yo windows. snatchin yo people up.</div>
-  <div class="banner red">WII GUNNA FIN WII GUNNA FIN U</div>
-  <div class="banner red">Oh you like these headers? Tell me how you've always been such a fan</div>
-  <div class="banner red">OMG lik srsly becky?</div>
-  <div class="banner red">JOIN BUILDERS CLUB! ITS FREEEEEEEEEEEEEE!!!!</div>
-  <div class="banner red">Yo RT stop yo ranting homies</div>
-  <div class="banner red">Haha these are so funny lets go spam the forums about them :D</div>
-  <div class="banner red">is anybody here besides minish a huge chris brown fan??</div>
-  <div class="banner red">Remember kids tell your parents to vote for Ron Paul</div>
-  <div class="banner red">Playing roblox is always better then going outside!</div>
-  <div class="banner red">Yo gonna give a shout out to the homies in dah hood</div>
-  <div class="banner pink">pink. it's my new obsession. pink. it not even a question.</div>
-  <div class="banner red">Abcedfghikjlmnoqprstuvwzyx</div>
-  <div class="banner red">SKRILLEX BANGARANG WUBWUWBWUBWUWBWUBWUWB</div>
-  <div class="banner orange">I'm the annoying orange banner. AHHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHHAHAHAHAHA</div>
-  <div class="banner red">NO TOMATO IS ALWAYS BEST SILLY ORANGE</div>
-  <div class="banner blue">minish is a stupid noob. nah not rly</div>
-  <div class="banner pink">remember kids trust anyone with your password</div>
-  <div class="banner orange">APRIL FEWLZ</div>
-  <div class="banner pink">Ten bux says we do roll back on today</div>
-  <div class="banner pink">hai itz pheedy mcnoobster and minish and we taken over</div>
-  <div class="banner pink">McNoobster in dah houze</div>
-  <div class="banner pink">McNoobster!!!!!!</div>
-  <div class="banner red">Proscribe stop posting your gonna get proscribed BROOOOOOO</div>
+  <h1>got root?</h1>
+  <p>The site is currently offline</p>
+  <button class="btn">Blacket</button>
 </body>
 </html>
